# lens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_EN.md  STYLING.md  TIMEOUT_DESIGN_AND_REVIEW.md  alembic.ini  docker-compose-1panel.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  release-drafter.yml
data/: providers.example.json
lens/: models.py
lens/core/: config.py  model_prices.py
lens/gateway/: router.py  service.py  upstreams.py
lens/persistence/: admin_store.py  channel_store.py  domain_store.py  entities.py  provider_store.py
lens_api/: app.py  cli.py  main.py  models.py
lens_api/api/: app.py
lens_api/core/: auth.py  config.py  db.py  model_group_status.py  model_prices.py  protocol_reachability.py  runtime_channel_ids.py  (+2 more)
migrations/: README  env.py  script.py.mako
scripts/: check_database_url.py  import_octopus_export.py  migrate.py  octopus_import_support.py  seed_admin.py
tests/: api_test_support.py  conftest.py  test_api_sites_and_groups.py  test_backup_model_group_protocols.py  test_channel_store.py  test_gateway_api_key_spend.py  test_gateway_routing.py  test_model_group_protocols.py  test_model_group_routing.py  test_model_group_stats.py  test_model_group_store.py  test_model_list_compat_mode.py  test_model_price_sync.py  test_router_protocol_compat.py
ui/: .env.example  components.json  next.config.ts  package.json  pnpm-lock.yaml
web/: index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+584 files in other folders)
